# PocketArk

./: .gitignore  Cargo.toml  LICENSE.md  README.md  cspell.json  packs.json
schemas/: auth.txt  structures.txt
scripts/: gen-certs.sh
src/: blaze.rs  cert.der  config.rs  http.rs  identity.p12  main.rs  packet.rs  state.rs
src/blaze/: blaze_socket.rs  components.rs  data.rs  mod.rs  packet.rs  router.rs  session.rs
src/blaze/models/: auth.rs  errors.rs  game_manager.rs  mod.rs  user_sessions.rs  util.rs
src/blaze/pk/: codec.rs  error.rs  mod.rs  packet.rs  reader.rs  router.rs  serialize.rs  tag.rs  types.rs  writer.rs
src/blaze/routes/: auth.rs  game_manager.rs  mod.rs  user_sessions.rs  util.rs
src/database/: mod.rs
src/database/entity/: challenge_counter.rs  challenge_progress.rs  characters.rs  class_data.rs  currency.rs  inventory_items.rs  mod.rs  seen_articles.rs  shared_data.rs  strike_team_mission.rs  strike_team_mission_progress.rs  strike_teams.rs  users.rs
src/database/migration/: m20230714_105755_create_users.rs  m20230714_105927_create_currency.rs  m20230714_105933_create_inventory_item.rs  m20230714_105940_create_seen_articles.rs  m20230714_105946_create_characters.rs  m20230714_112535_create_shared_data.rs  m20230714_113455_create_class_data.rs  m20230720_145347_create_challenge_progress.rs  m20230731_123814_create_strike_teams.rs  m20231218_130320_create_challenge_counter.rs  m20231223_184934_create_strike_team_missions.rs  m20231223_185554_create_strike_team_mission_progress.rs  mod.rs
src/database/seed/: mod.rs
src/definitions/: badges.rs  challenges.rs  characters.rs  classes.rs  i18n.rs  items.rs  level_tables.rs  match_modifiers.rs  mod.rs  packs.rs  shared.rs  skills.rs  storeCatalog.json  store_catalogs.rs  strike_teams.rs  striketeams.rs
src/http/: mod.rs
src/http/middleware/: ip_address.rs  json_dump.rs  json_validated.rs  mod.rs  upgrade.rs  user.rs
src/http/models/: auth.rs  challenge.rs  character.rs  client.rs  errors.rs  inventory.rs  leaderboard.rs  mission.rs  mod.rs  qos.rs  store.rs  strike_teams.rs  telemetry.rs  user_match.rs
src/http/routes/: activity.rs  auth.rs  challenge.rs  character.rs  client.rs  configuration.rs  inventory.rs  leaderboard.rs  mission.rs  mod.rs  presence.rs  qos.rs  store.rs  strike_teams.rs  telemetry.rs  user_match.rs
src/resources/data/: activityMetadata.json  activityReportResult.json  challengeDefinitions.json  characterClasses.json  characterLevelTables.json  currentMissions.json  inventoryDefinitions.json  matchBadges.json  matchModifiers.json  placeholderCharacters.json  skillDefinitions.json  storeCatalog.json  strikeTeamMissions.json  strikeTeamSpecializations.json  strikeTeamSuccessRate.json  strikeTeamTags.json  strikeTeamTraits.json
src/resources/data/strikeTeams/: dynamicModifiers.json  equipment.json  missionDescriptors.json  missionNames.json  missionSpecific.json  missionTags.json  missionTraits.json  missionTypes.json  specializations.json  strikeTeams.json  traits.json
src/resources/defaults/: inventory.json  placeholderChallengeProgress.json  placeholderCharacters.json  placeholderInventory.json  purchased.json
src/resources/defaults/strikeTeams/: missionConfig.json  missionRewards.json  placeholderResolve.json
src/resources/defs/: challenges.json  configuration.json  inventory.json  leaderboards.json
src/resources/defs/min/: challenges.json  configuration.json
src/resources/defs/raw/: Consume_Inventory_Item-1688700313272.json  Create_Activity_Report-1688700352069.json  Finish_Mission-1688700370402.json  Get_Challenges-1688700267473.json  Get_Character_-1689039081314.json  Get_Character_Classes-1688700203514.json  Get_Character_Equipment_History-1688700230094.json  Get_Character_Level_Tables-1688700338695.json  Get_Characters-1689039048546.json  Get_Current_Mission-1688700356655.json  Get_Inventory_With_Definitions-1688700307239.json  Get_Mission_Details-1688700361289.json  Get_Store_Article_Definitions-1688700283519.json  Get_Strike_Team_Success_Rate-1688700327687.json  Get_Strike_Teams-1688700334138.json  Get_User_Challenges-1688700271729.json  Get_User_Currencies-1688700294409.json  Get_User_Match_Badges-1688700344615.json  Get_User_Match_Modifiers-1688700322703.json  Pin-1689040402347.json  PostInventoryConsume.json  Resolve_strike_team_mission-1689224161324.json  Resolve_strike_team_mission-1689225057048.json  Start_Mission-1688700366125.json  Store_claim_unclaimed-1688700288596.json  Update Equipment.json  Update_Character_Skill_Trees-1688700262159.json  fm2  sharedProgression.json
src/resources/identity/: key.pem
src/services/: activity.rs  badges.rs  catalogs.rs  challenges.rs  characters.rs  classes.rs  game.rs  game_manager.rs  i18n.rs  items.rs  level_tables.rs  match_data.rs  match_modifiers.rs  mission.rs  mod.rs  packs.rs  sessions.rs  skills.rs  striketeams.rs
src/services/activity/: mod.rs
src/services/challenges/: mod.rs
src/services/character/: class.rs  levels.rs  mod.rs  skill.rs
src/services/defs/: mod.rs
src/services/game/: data.rs  manager.rs  matchmaking.rs  mod.rs  player.rs  rules.rs  store.rs
src/services/i18n/: mod.rs
src/services/items/: mod.rs  pack.rs  v2.rs
src/services/match_data/: mod.rs
src/services/sessions/: mod.rs
src/services/store/: mod.rs
src/services/strike_teams/: mod.rs
src/services/tokens/: mod.rs
src/services/tunnel/: http_tunnel.rs  mappings.rs  mod.rs  udp_tunnel.rs
src/structs/: mod.rs
src/utils/: constants.rs  hashing.rs  lock.rs  logging.rs  mod.rs  models.rs  signing.rs
