[package]
name = "pocket-ark"
version = "0.1.0"
edition = "2021"
description = "Mass Effect Andromeda private server"
license = "MIT"
keywords = ["EA", "PocketArk", "MassEffectAndromeda"]
authors = ["Jacobtread <jacobtread@gmail.com>"]

[dependencies]
openssl = "^0.10"
axum = { version = "^0.6", features = ["tracing", "tower-log"] }
axum-server = { version = "^0.5", features = ["tls-openssl"] }

hyper = { version = "^0.14", features = ["full"] }
tokio = { version = "^1", features = ["full"] }
tower = "^0.4"
tower-http = { version = "^0.4", features = ["full"] }

log = "^0.4"
env_logger = "^0.10"

reqwest = { version = "^0.11", features = ["json", "deflate", "gzip"] }

serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
bitflags = "2.3.3"
bytes = "1.4.0"
tokio-util = { version = "0.7.8", features = ["full"] }
futures = "0.3.28"
uuid = { version = "1.4.0", features = ["v4", "serde", "fast-rng"] }
chrono = { version = "0.4.26", features = ["serde", "alloc"] }
thiserror = "1"
dotenvy = "0.15.7"
ring = "0.16"

base64ct = { version = "1.5", features = ["alloc"] }
interlink = "0.1"
serde_with = "3.0.0"

# Password hashing
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8.5"
csv = "1.2.2"


[dependencies.log4rs]
version = "1.2.0"
default-features = false
features = ["console_appender", "file_appender"]

# SeaORM 
[dependencies.sea-orm]
version = "^0"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-uuid",
    "with-json",
    "sqlx-sqlite",
]

# SeaORM Migration 
[dependencies.sea-orm-migration]
version = "^0"
default-features = false
features = ["runtime-tokio-rustls", "sqlx-sqlite"]
