[package]
name = "pocket-ark"
version = "0.1.0"
edition = "2021"
description = "Mass Effect Andromeda private server"
license = "MIT"
keywords = ["EA", "PocketArk", "MassEffectAndromeda"]
authors = ["Jacobtread <jacobtread@gmail.com>"]

[dependencies]
axum = { version = "^0.6", features = ["tracing", "tower-log"] }

hyper = { version = "^0.14", features = ["full"] }
tokio = { version = "^1", features = ["full"] }
tower = "^0.4"
tower-http = { version = "^0.4", features = ["full"] }

log = "^0.4"
log-panics = { version = "2", features = ["with-backtrace"] }

serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
bitflags = { version = "2.3", features = ["serde"] }
bytes = "1.5"
tokio-util = { version = "0.7", features = ["full"] }
futures = "^0.3"
uuid = { version = "^1", features = ["v4", "serde", "fast-rng"] }
chrono = { version = "^0.4", features = ["serde", "alloc"] }

thiserror = "1"
anyhow = "1.0"

dotenvy = "^0.15"
ring = "^0.16"

base64ct = { version = "1.6", features = ["alloc"] }
serde_with = "3"

# Password hashing
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
csv = "1.3"

tdf = { version = "0.4", path = "../../tdf", features = ["bytes"] }
parking_lot = "0.12"

# Const safe HashMaps (Can be replaced with std HashMap after https://github.com/rust-lang/rust/issues/102575 is resolved)
hashbrown = { version = "0.14", default-features = false, features = [
    "allocator-api2",
    "inline-more",
] }
serde_path_to_error = "0.1.14"
num_enum = "0.7.1"
strum = { version = "0.25", features = ["derive"] }
validator = { version = "0.16.1", features = ["derive"] }

[dependencies.log4rs]
version = "1.2.0"
default-features = false
features = ["console_appender", "file_appender"]

# SeaORM 
[dependencies.sea-orm]
version = "^0"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-uuid",
    "with-json",
    "sqlx-sqlite",
]

# SeaORM Migration 
[dependencies.sea-orm-migration]
version = "^0"
default-features = false
features = ["runtime-tokio-rustls", "sqlx-sqlite"]
