[package]
name = "pocket-ark"
version = "0.1.0"
edition = "2024"
description = "Mass Effect Andromeda private server"
license = "MIT"
keywords = ["EA", "PocketArk", "MassEffectAndromeda"]
authors = ["Jacobtread <jacobtread@gmail.com>"]

[dependencies]
# HTTP framework and related dependencies
axum = { version = "^0.8.7", features = ["tracing", "tower-log"] }
hyper = { version = "^1.8.1", features = ["full"] }
tower = "^0.5.2"
tower-http = { version = "^0.6.7", features = ["full"] }
hyper-util = { version = "0.1.18", features = ["tokio"] }

# Async runtime and utilities
tokio = { version = "^1", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["full"] }
futures = "^0.3.31"

# Logging
log = { version = "^0.4.28", features = ["serde"] }
log-panics = { version = "2.1.0", features = ["with-backtrace"] }

# Serialization
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde_path_to_error = "0.1.20"
serde_with = "3.16.1"

# Bit flags
bitflags = { version = "2.10", features = ["serde"] }

# Cheaply cloned bytes
bytes = "1.11.0"

# Unique IDs
uuid = { version = "^1", features = ["v4", "serde", "fast-rng"] }

# Date and time
chrono = { version = "^0.4.42", features = ["serde", "alloc"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Environment variables
dotenvy = "^0.15.7"

# Cryptography and hashing
ring = "^0.17.14"
argon2 = { version = "0.5.3", features = ["std"] }

# Base64
base64ct = { version = "1.8.0", features = ["alloc"] }

# Random number generation
rand = "0.8"

# CSV parsing
csv = "1.4.0"

# TDF packet format
tdf = { version = "0.4", features = ["bytes"] }

# Locks
parking_lot = "0.12.5"

# Numeric enums
num_enum = "0.7.5"

# String enums
strum = { version = "0.27.2", features = ["derive"] }

# Validation
validator = { version = "0.20.0", features = ["derive"] }

# UDP tunnel impl
pocket-relay-udp-tunnel = "0.0.0"

# Library for obtaining the local IP address of the device
local-ip-address = "0.6"

# Logging backend
[dependencies.log4rs]
version = "1.3.0"
default-features = false
features = ["console_appender", "file_appender"]

# SeaORM
[dependencies.sea-orm]
version = "^1.1.19"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-uuid",
    "with-json",
    "sqlx-sqlite",
]

# SeaORM Migration
[dependencies.sea-orm-migration]
version = "^1.1.19"
default-features = false
features = ["runtime-tokio-rustls", "sqlx-sqlite"]

# HTTP Client
[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls"]
